# scheduler

./: README.md  pyproject.toml
ops/systemd/: insource_sch.service
scheduler/: main.py
